@@ -51,6 +51,9 @@ installations.
 	importDump.php
 	XML dump importer
 	
+	importImages.php
+	Imports images into the wiki
+	
 	importTextFile.php
 	Imports the contents of a text file into a wiki page
 
